syntax = "proto3";

option go_package = ".;protobuf";
package unitygrpc;

service UnityGRPC {
	rpc HelloStream (stream HelloRequest) returns (stream HelloResponse);
	rpc Hello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}